crates/engine/src/snapshots/auto_crop_engine__migrate__tests__v1_empty.snap
---
source: crates/engine/src/migrate.rs
expression: state
---
{
  "version": 1,
  "orientation": {
    "quarterTurns": 0,
    "mirror": false
  },
  "items": [],
  "margin": {
    "kind": "paperEdge",
    "margin": 0.0
  },
  "enhance": {
    "mode": "original"
  }
}
