crates/engine/src/snapshots/auto_crop_engine__migrate__tests__v2_split_three_items.snap
---
source: crates/engine/src/migrate.rs
expression: state
---
{
  "version": 3,
  "orientation": {
    "quarterTurns": 0,
    "mirror": false
  },
  "items": [
    {
      "id": 1,
      "include": true,
      "geometry": {
        "type": "quad",
        "corners": [
          {
            "x": 0.04,
            "y": 0.05
          },
          {
            "x": 0.47,
            "y": 0.04
          },
          {
            "x": 0.48,
            "y": 0.46
          },
          {
            "x": 0.05,
            "y": 0.47
          }
        ],
        "quarterTurns": 0,
        "mirror": false,
        "fineDeg": 0.0
      },
      "enhanceOverride": null,
      "origin": {
        "kind": "auto",
        "pipelineVer": 2
      },
      "confidence": {
        "score": 0.96875,
        "forced": null,
        "reasons": []
      }
    },
    {
      "id": 2,
      "include": true,
      "geometry": {
        "type": "quad",
        "corners": [
          {
            "x": 0.53,
            "y": 0.06
          },
          {
            "x": 0.95,
            "y": 0.05
          },
          {
            "x": 0.96,
            "y": 0.47
          },
          {
            "x": 0.52,
            "y": 0.48
          }
        ],
        "quarterTurns": 0,
        "mirror": false,
        "fineDeg": 1.5
      },
      "enhanceOverride": null,
      "origin": {
        "kind": "auto",
        "pipelineVer": 2
      },
      "confidence": {
        "score": 0.78125,
        "forced": "check",
        "reasons": [
          {
            "code": "WEAK_EDGE",
            "side": "left"
          },
          {
            "code": "PARTIAL_FRAME"
          }
        ]
      }
    },
    {
      "id": 3,
      "include": false,
      "geometry": {
        "type": "quad",
        "corners": [
          {
            "x": 0.2,
            "y": 0.55
          },
          {
            "x": 0.8,
            "y": 0.54
          },
          {
            "x": 0.81,
            "y": 0.96
          },
          {
            "x": 0.21,
            "y": 0.96875
          }
        ],
        "quarterTurns": 1,
        "mirror": true,
        "fineDeg": 0.0
      },
      "enhanceOverride": null,
      "origin": {
        "kind": "autoThenEdited"
      },
      "confidence": null
    }
  ],
  "margin": {
    "kind": "paperEdge",
    "margin": 0.0
  },
  "enhance": {
    "mode": "original"
  },
  "split": {
    "policy": "auto",
    "profile": "receipts",
    "orderMode": "reading",
    "nextId": 4
  }
}
